--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "serve": "ts-node src/server.ts",
     "start": "npm install && npm run migration && npm run serve",
     "typeorm": "typeorm-ts-node-esm -d ./src/data-source.ts",
-    "create-migration": "npm run typeorm migration:generate -n AddUserAndTokenTable",
+    "create-migration": "npm run typeorm migration:generate -n ./src/migration/AddUserAndTokenTable",
     "migration": "npm run typeorm migration:run",
     "revert": "npm run tsc && ./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:revert"
   },
@@ -23,12 +23,12 @@
   "dependencies": {
     "@koa/cors": "^3.3.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/koa": "^2.13.4",
+    "@types/koa__cors": "^3.3.0",
     "@types/koa-bodyparser": "^4.3.7",
     "@types/koa-cookie": "^1.0.0",
-    "@types/cors": "^2.8.12",
-    "@types/koa__cors": "^3.3.0",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^17.0.31",
     "@types/node-rsa": "^1.1.1",
@@ -50,7 +50,8 @@
     "tslint": "^5.20.1",
     "tslint-config-airbnb": "^5.11.2",
     "typeorm": "^0.3.6",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "winston": "^3.8.2"
   },
   "engines": {
     "node": "16.x"
