Update package json name

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Auth Boilerplate",
+  "name": "auth_boilerplate",
   "version": "1.0.0",
   "description": "by Marcus Peh",
   "main": "index.js",
