--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,8 @@
     "@types/react-dom": "18.0.5",
     "axios": "^1.6.2",
     "cookie": "^0.5.0",
-    "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6",
+    "eslint": "^8.53.0",
+    "eslint-config-next": "^12.3.4",
     "next": "^14.0.3",
     "node-rsa": "^1.1.1",
     "react": "18.2.0",
