--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "lint": "tslint --project tsconfig.json --format stylish",
     "build": "tsc",
+    "lint": "gts lint",
+    "clean": "gts clean",
+    "fix": "gts fix",
     "tsc": "tsc && echo 'tsc-ed'",
     "serve": "ts-node src/server.ts",
     "start": "npm install && npm run migration && npm run serve",
@@ -16,10 +18,11 @@
     "revert": "npm run tsc && ./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:revert"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "marcuspeh",
+  "license": "",
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "gts": "^5.0.0"
   },
   "dependencies": {
     "@koa/cors": "^4.0.0",
@@ -34,6 +37,7 @@
     "@types/node": "^20.1.4",
     "@types/node-rsa": "^1.1.1",
     "@types/validator": "^13.7.17",
+    "autoprefixer": "10.4.14",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -48,8 +52,6 @@
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
-    "tslint": "^5.11.0",
-    "tslint-config-airbnb": "^5.11.2",
     "typeorm": "^0.3.16",
     "typescript": "^5.0.4",
     "winston": "^3.8.2"
