--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,4 +1,7 @@
 {
-    "extends": "./node_modules/gts/"
+    "extends": "./node_modules/gts/",
+    "rules": {
+        "@typescript-eslint/no-explicit-any": 0
+    }
 }
   
