--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "auth_boilerplate",
   "version": "1.0.0",
   "description": "by Marcus Peh",
-  "main": "index.js",
+  "main": "index.js", "type": "module",
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
