--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -33,9 +33,8 @@
     "incremental": true
   },
   "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
+    "src/**/*.ts",
+    "src/**/*.tsx"
   ],
   "exclude": [
     "node_modules"
