--- a/backend/package.json
+++ b/backend/package.json
@@ -15,14 +15,18 @@
     "typeorm": "typeorm-ts-node-esm -d ./src/data-source.ts",
     "create-migration": "npm run typeorm migration:generate -n ./src/migration/AddUserAndTokenTable",
     "migration": "npm run typeorm migration:run",
-    "revert": "npm run tsc && ./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:revert"
+    "revert": "npm run tsc && ./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:revert",
+    "test": "jest"
   },
   "keywords": [],
   "author": "marcuspeh",
   "license": "",
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "gts": "^5.0.0",
-    "nodemon": "^3.0.1"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "ts-jest": "^29.1.1"
   },
   "dependencies": {
     "@koa/cors": "^4.0.0",
