--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,7 +1,11 @@
 {
     "extends": "./node_modules/gts/",
     "rules": {
-        "@typescript-eslint/no-explicit-any": 0
+        "@typescript-eslint/no-explicit-any": 0,
+        "sort-imports": ["error", {
+            "allowSeparatedGroups": true,
+            "ignoreCase": true
+        }]
     }
 }
   
